recursos/ejemplosTiposObjetos/Ejemplo1-namespace.yaml
# Tipo de objeto
kind: Namespace
# Libreria dentro de Kubernetes que contien la definición de ese tipo de objeto
apiVersion: v1

metadata:
    name: prueba # Este es su identificador
