recursos/ejemplosTiposObjetos/Ejemplo10-configmap.yaml
# Con este comando creariamos un secret a mano desde la terminal, que no aparece en ningún fichero.
# kubectl create secret generic misecreto --from-literal=password=micontrasena
---
# Esto es responsablidad pura del desarrollador... AQUI EL ADMIN NO TOCA POR NADA DEL MUNDO VVVV
kind: Pod
apiVersion: v1

metadata:
    name: prueba-configmap 

spec:
    containers:
        - image: nginx
          name: prueba1
        - image: fedora
          name: prueba2
          command: ['sh', '-c' , 'sleep 3600;']
        - image: ubuntu
          command: ['sh', '-c' , 'sleep 3600;']
          name: prueba3
          env: # SIEMPRE el env tiene prioridad sobre el envFrom
            - name: propiedad2 
              value: VALOR_FIJO_PERSONALIZADO
          volumeMounts:
            - name: ficheros-configuracion
              mountPath: /config
    volumes:
        - name: ficheros-configuracion
          configMap:
            name: configuracion2
