recursos/ejemplosTiposObjetos/Ejemplo19-mariadb-pod.afinidad.yaml
kind:           Pod
apiVersion:     v1
metadata:
    name:       mariadb-pod 
    labels:
                app: mariadb 
spec:
    affinity:
        podAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                        - key: app
                          operator: In               # In NotIn Exists DoesNotExist Gt Lt
                          values: 
                            - nginx
                  topologyKey: kubernetes.io/hostname
    containers:
        -   # Contenedor nginx
            name:   mariadb-container
            image:  mariadb:latest
            ports:
                - containerPort: 3306     # Puramente informacional
                                          # Por ahora....
            volumeMounts:
                - name: datos-bbdd
                  mountPath: /var/lib/mysql
    volumes:
        - name: datos-bbdd
          persistentVolumeClaim:
              claimName: mariadb-peticion-volumen
