recursos/ejemplosTiposObjetos/Ejemplo8-mariadb-deployment.yaml
                # Tipo de objeto
kind:           Deployment
                # Libreria dentro de Kubernetes que contiene
                # la definición de ese tipo de objeto
apiVersion:     apps/v1


metadata:
                # Este es su identificador
    name:       mariadb-deployment 
                # Etiquetas, con un determinado valor.
                # Qué etiquetas? Las que quiera.
    labels:
                app: mariadb 
spec:
    replicas: 1
    
    selector:   
        matchLabels:
            app: mariadb    # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

    template:
        metadata:
                        # Este es su identificador
            name:       mariadb-pod 
                        # Etiquetas, con un determinado valor.
                        # Qué etiquetas? Las que quiera.
            labels:
                        app: mariadb     # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
        spec:
            containers:
                -   # Contenedor nginx
                    name:   mariadb-container
                    image:  mariadb:latest
                    ports:
                        - containerPort: 3306     # Puramente informacional
                                                  # Por ahora....
                    volumeMounts:
                        - name: datos-bbdd
                          mountPath: /var/lib/mysql
            volumes:
                - name: datos-bbdd
                  persistentVolumeClaim:
                      claimName: mariadb-peticion-volumen
