recursos/ejemplosTiposObjetos/Ejemplo11-kibana-deployment.yaml

kind: Service
apiVersion: v1

metadata:
    name: kibana-svc

spec:
    type: NodePort 
    selector:
        app: kibana
    ports:
        - port: 5601
          targetPort: 5601
          nodePort: 31000
          
---
                # Tipo de objeto
kind:           Deployment
                # Libreria dentro de Kubernetes que contiene
                # la definición de ese tipo de objeto
apiVersion:     apps/v1


metadata:
                # Este es su identificador
    name:       kibana
                # Etiquetas, con un determinado valor.
                # Qué etiquetas? Las que quiera.
    labels:
                app: kibana 
spec:
    replicas: 1
    
    selector:   
        matchLabels:
            app: kibana    # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

    template:
        metadata:
                        # Este es su identificador
            name:       kibana-pod 
                        # Etiquetas, con un determinado valor.
                        # Qué etiquetas? Las que quiera.
            labels:
                        app: kibana     # <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
        spec:
            containers:
                -   # Contenedor kibana
                    name:   kibana
                    image:  docker.elastic.co/kibana/kibana:7.11.0
                    ports:
                        - containerPort: 5601   
                    resources:
                        requests:
                            memory: 300Mi
                            #cpu: 2  # número de cpus que puedo usar como máximo
                                    # se mide por unidad de tiempo (s)
                                    # En un segundo podrás utilizar el equivalente a tener 2 CPUS al 100% durante 1 segundo
                                    # A lo mejor le tengo medio segundo sin darle acceso a la CPU, y luego en medio segundo le dejo usar 4 CPUs al 100%
                            cpu: 1500m   # 1.5
                            # En un segundo 1000 ms puedo estar usando cpus durante 1500ms en total   3 CPUS de cada una 500ms: 5 CPUs 300ms cada segundo
                        #limits:
                        #    cpu: 100m   # 1.5
